--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: paleturquoise;
+}
+
 #enter-value-banner {
     background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
@@ -29,10 +33,43 @@
     box-shadow: 0px 5px 20px white;
 }
 
-#countdown-outer {
-    background-color: black;
+#countdown-container {
+    background-color: #555555;
+    height: 200px;
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
 
 .counter {
-    background-color: white;
+    display: inline-block;
+    background-color: aliceblue;
+    width: 15%;
+    max-width: 80px;
+    height: 80px;
+    margin: auto 10px;
+    box-shadow: 0px 0px 5px white;
+    position: relative;
+    overflow: hidden;
+}
+
+.counter p {
+    font-size: 3rem;
+    text-align: center;
+    margin: 0;
+    width: 100%;
+    line-height: 80px;
+    border-top: 2px solid black;
+    background-color: aliceblue;
+}
+
+p.next {
+    position: absolute;
+    top: 80px;
+}
+
+p.animate {
+    transition-duration: 0.5s;
+    top: 0px;
 }
